Fixed lots of things to do with view actions on pending items in a table. Fixed archive button not showing a change when something is already archived.

--- a/core/admin/css/main.css
+++ b/core/admin/css/main.css
@@ -963,7 +963,7 @@
 	.icon_sort { background: url(../images/icons.png) no-repeat -421px 9px; cursor: move; display: block; float: left; height: 35px; margin: 0 5px 0 0; width: 12px; }
 	.icon_edit { background: url(../images/icons.png) no-repeat -433px 5px; display: inline-block; height: 35px; width: 20px; }
 	.icon_archive { background: url(../images/icons.png) no-repeat -93px 5px; display: inline-block; height: 35px; width: 20px; }
-	.icon_restore { background: url(../images/icons.png) no-repeat -16px 5px; display: inline-block; height: 35px; width: 21px; }
+	.icon_archive_on, .icon_restore { background: url(../images/icons.png) no-repeat -16px 5px; display: inline-block; height: 35px; width: 21px; }
 	.icon_delete { background: url(../images/icons.png) no-repeat -38px 8px; display: inline-block; height: 35px; width: 16px; }
 	.icon_approve { background: url(../images/icons.png) no-repeat -156px 5px; display: inline-block; height: 35px; width: 24px; }
 	.icon_approve_on { background-position: -180px 5px; }
